Fixes spacing on landing page to no scrollbar

--- a/static/myThemes/sympyTheme/css/style.css
+++ b/static/myThemes/sympyTheme/css/style.css
@@ -437,13 +437,11 @@ body.section-show .transition-mask:before{
 
 
 .front-section{
-	padding-top:60px;
-	padding-bottom:200px;
 	position:relative;
 }
 .front-heading{
 	text-align:center;
-	margin-top:190px;
+	margin-top:94px;
 }
 .front-heading > h2{
 	font-size:55px;
